--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
                                                 <a href="services.html">Services</a>
                                                   <ul>
                                                        <li class="has-sub">
-                                                          <a href="services.html">Invertors</a>
+                                                          <a href="services.html">Inverters</a>
                                                        <ul>
                                                           <li><a href="services.html">Page-1</a></li>
                                                           <li><a href="services.html">Page-2</a></li>
