--- a/batt-rese.html
+++ b/batt-rese.html
@@ -100,7 +100,7 @@
                                               <a href="services.html">Services</a>
                                                 <ul>
                                                      <li class="has-sub">
-                                                        <a href="services.html">Invertors</a>
+                                                        <a href="services.html">Inverters</a>
                                                      <ul>
                                                         <li><a href="services.html">Residential</a></li>
                                                         <li><a href="services.html">Commercial</a></li>
